--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "dev": "webpack --watch --mode development"
   },
   "author": "Suvesh Trivedi",
   "license": "ISC",
@@ -19,7 +20,18 @@
   },
   "homepage": "https://github.com/Suveshtr/react-boilerplate#readme",
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.4"
+  },
+  "dependencies": {
+    "prop-type": "0.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
