--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "react-boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack --watch --mode development"
+    "build": "webpack --config webpack.config.prod.js",
+    "dev": "webpack --watch --config webpack.config.dev.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Suvesh Trivedi",
   "license": "ISC",
@@ -27,7 +27,8 @@
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "prop-type": "0.0.1",
