--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "prop-type": "0.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
