--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack.config.prod.js",
     "dev": "webpack-dev-server --open --config webpack.config.dev.js",
     "dev:hot": "webpack-dev-server --open --hot --config webpack.config.dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Suvesh Trivedi",
   "license": "ISC",
@@ -27,9 +27,15 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^8.0.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
+    "jest-dom": "^3.5.0",
     "react-hot-loader": "^4.11.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.33.0",
