--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --config webpack.config.prod.js",
     "dev": "webpack-dev-server --open --config webpack.config.dev.js",
     "dev:hot": "webpack-dev-server --open --hot --config webpack.config.dev.js",
-    "test": "jest"
+    "test": "jest",
+    "format": "pretty-quick"
   },
   "author": "Suvesh Trivedi",
   "license": "ISC",
@@ -36,6 +37,8 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "jest-dom": "^3.5.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.0",
     "react-hot-loader": "^4.11.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.33.0",
