--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --open --config webpack.config.dev.js",
     "dev:hot": "webpack-dev-server --open --hot --config webpack.config.dev.js",
     "test": "jest",
-    "format": "pretty-quick"
+    "format": "pretty-quick",
+    "lint": "eslint ./"
   },
   "author": "Suvesh Trivedi",
   "license": "ISC",
@@ -30,10 +31,13 @@
     "@babel/preset-react": "^7.0.0",
     "@testing-library/react": "^8.0.1",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "css-loader": "^3.0.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.13.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "jest-dom": "^3.5.0",
