--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "format": "pretty-quick",
     "lint": "eslint ./"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint && npm run test"
+    }
+  },
   "author": "Suvesh Trivedi",
   "license": "ISC",
   "repository": {
@@ -39,6 +44,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.13.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^2.4.1",
     "jest": "^24.8.0",
     "jest-dom": "^3.5.0",
     "prettier": "^1.18.2",
